--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@awesome-cordova-plugins/core": "^6.2.0",
+    "@awesome-cordova-plugins/in-app-browser": "^6.2.0",
     "@awesome-cordova-plugins/native-geocoder": "^5.44.0",
     "@capacitor/android": "4.0.1",
     "@capacitor/app": "^4.0.1",
@@ -29,6 +31,7 @@
     "@capacitor/keyboard": "^4.0.1",
     "@capacitor/status-bar": "^4.0.1",
     "@ionic/angular": "^6.1.9",
+    "cordova-plugin-inappbrowser": "^5.0.0",
     "cordova-plugin-nativegeocoder": "^3.4.1",
     "firebase": "^9.9.2",
     "rxjs": "~6.6.0",
